--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".feature.signup.SignUpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".feature.main.MainActivity"
             android:exported="false" />
     </application>
 
